--- a/index.html
+++ b/index.html
@@ -1,35 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Editor JavaScript | Deepraj </title>
-    <link rel="stylesheet" href="style.css">
-    <!-- BoxIcon & FontAwesome Link For Icons -->
-    <link rel="stylesheet" href="https://unpkg.com/boxicon@2.1.2/css/boxicons.min.css" >
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Image Editor JavaScript | Deepraj </title>
+  <link rel="stylesheet" href="style.css">
+  <!-- BoxIcon & FontAwesome Link For Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
+
 <body>
-   <div class="container">
-     <h2>Easy Image Editor</h2>
-     <div class="css-panel">
-     </div> 
-     <div class="wrapper">
-        <div class="editor-panel">
-            <div class="filer">
-              <lable class="title">Filters</lable>  
-              <div class="options">
-                <button>Brightness</button>
-                <button>Saturation</button>
-                <button>Inversion</button>
-                <button>Grayscale</button>
-              </div>
-            </div>
-            <div class="rotate"></div>
-        </div>
-        <div class="preview-img"></div>
-     </div>   
+  <div class="container">
+    <h2>Easy Image Editor</h2>
+    <div class="css-panel">
     </div>
-   
+    <div class="wrapper">
+      <div class="editor-panel">
+        <div class="filer">
+          <lable class="title">Filters</lable>
+          <div class="options">
+            <button>Brightness</button>
+            <button>Saturation</button>
+            <button>Inversion</button>
+            <button>Grayscale</button>
+          </div>
+          <div class="slider">
+            <div class="filter-info">
+              <p class="name">Brightness</p>
+              <p class="value">100%</p>
+            </div>
+            <input type="range" value="100" min="0" max="200">
+          </div>
+        </div>
+        <div class="rotate">
+          <lable class="title">Rotate & Flip</lable>
+          <div class="options">
+            <button><i class="fa-solid fa-rotate-left"></i></button>
+            <button><i class="fa-solid fa-rotate-right"></i></button>
+            <button><i class="bx bx-reflect-vertical"></i></button>
+            <button><i class="bx bx-reflect-horizontal"></i></button>
+          </div>
+        </div>
+      </div>
+      <div class="preview-img"></div>
+      <img src="image-placeholder.svg" alt="preview-img">
+    </div>
+  </div>
+<div class="controls">
+  <button class="reset-filter">reset-filter</button>
+  <div class="row">
+    <button class="chosse-img">Choose Image</button>
+    <button class="save-image">Save Image</button>
+  </div>
+</div>
+
+
 </body>
+
 </html>
