html page is done

--- a/index.html
+++ b/index.html
@@ -44,18 +44,20 @@
           </div>
         </div>
       </div>
-      <div class="preview-img"></div>
-      <img src="image-placeholder.svg" alt="preview-img">
+      <div class="preview-img">
+        <img src="image-placeholder.svg" alt="preview-img">
+      </div>
+      
     </div>
-  </div>
-<div class="controls">
-  <button class="reset-filter">reset-filter</button>
-  <div class="row">
-    <button class="chosse-img">Choose Image</button>
-    <button class="save-image">Save Image</button>
-  </div>
-</div>
 
+      <div class="controls">
+      <button class="reset-filter">reset-filter</button>
+      <div class="row">
+         <button class="chosse-img">Choose Image</button>
+           <button class="save-image">Save Image</button>
+      </div>
+   </div>
+</div>
 
 </body>
 
