--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </div>
     <div class="wrapper">
       <div class="editor-panel">
-        <div class="filer">
+        <div class="filter">
           <lable class="title">Filters</lable>
           <div class="options">
-            <button>Brightness</button>
+            <button class="active">Brightness</button>
             <button>Saturation</button>
             <button>Inversion</button>
             <button>Grayscale</button>
@@ -53,8 +53,8 @@
       <div class="controls">
       <button class="reset-filter">reset-filter</button>
       <div class="row">
-         <button class="chosse-img">Choose Image</button>
-           <button class="save-image">Save Image</button>
+         <button class="choose-img">Choose Image</button>
+           <button class="save-img">Save Image</button>
       </div>
    </div>
 </div>
