file-input as image on click choose img button

--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
       <div class="controls">
       <button class="reset-filter">reset-filter</button>
       <div class="row">
+        <input type="file" class="file-input" accept="image/*" hidden>
          <button class="choose-img">Choose Image</button>
            <button class="save-img">Save Image</button>
       </div>
    </div>
 </div>
-
+<script src="script.js"></script>
 </body>
 
 </html>
