--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="container ">
+  <div class="container disable ">
     <h2>Easy Image Editor</h2>
     <div class="css-panel">
     </div>
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="preview-img">
-        <img src="image-placeholder.svg" alt="preview-img">
+        <img src="image-placeholder.svg" alt="preview-img" >
       </div>
       
     </div>
