css disply on top off the container

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <button id="saturation" >Saturation</button>
             <button id="inversion" >Inversion</button>
             <button id="grayscale" >Grayscale</button>
+            <button id="contrast" >Contrast</button>
+            <button id="opacity" >Opacity</button>
+            <button id="blur" >Blur</button>
           </div>
           <div class="slider">
             <div class="filter-info">
